# media_server

./: .gitignore  README.md  pyproject.toml  requirements.txt
media_server/: MediaClient.py  __init__.py  gemini_server.py  ollama_server.py  storage.py  utils.py
scripts/: rename_movies.py  run_server.py
